--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,14 @@ services:
         restart: always
         volumes: 
             - .:/usr/app
+
+    db:
+        container_name: 'database-node'
+        image: mysql:5.7.31
+        command: --default-authentication-plugin=mysql_native_password --sql_mode=NO_ENGINE_SUBSTITUTION,NO_AUTO_CREATE_USER --explicit_defaults_for_timestamp
+        restart: always
+        ports: 
+        - '3308:3306'
+        environment: 
+        - MYSQL_ROOT_PASSWORD=root
+        - TZ=America/Sao_Paulo
