--- a/todolist/package.json
+++ b/todolist/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "0.18.0",
+    "bootstrap": "4.1.1",
     "express": "^4.17.1",
+    "font-awesome": "4.7.0",
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "4.2.0",
+    "react-router-dom": "4.2.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
