--- a/todolist/package.json
+++ b/todolist/package.json
@@ -7,10 +7,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "0.18.0",
-    "bootstrap": "4.1.1",
+    "axios": "0.21.1",
+    "bootstrap": "4.3.1",
     "express": "^4.17.1",
     "font-awesome": "4.7.0",
+    "json-server": "0.13.0",
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -25,6 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  
   "eslintConfig": {
     "extends": [
       "react-app",
