--- a/todolist/docker-compose.yml
+++ b/todolist/docker-compose.yml
@@ -9,24 +9,9 @@ services:
         restart: always
         volumes: 
             - .:/usr/app
-        
-
-    db:
-        container_name: 'database-node'
-        image: mysql:5.7.31
-        command: --default-authentication-plugin=mysql_native_password --sql_mode=NO_ENGINE_SUBSTITUTION,NO_AUTO_CREATE_USER --explicit_defaults_for_timestamp
-        restart: always
-        ports: 
-        - '3308:3306'
-        environment: 
-        - MYSQL_ROOT_PASSWORD=root
-        - TZ=America/Sao_Paulo
-    
     json:
         build: .
-        container_name: 'json-server'
-        image: vimagick/json-server
-        command: -H 0.0.0.0 -p 3001 -w db.json
+        command: npx json-server --watch data/db.json --port 3001
         ports:
           - "3001:3001"
         volumes:
